@@ -1,5 +1,6 @@
 package lk.ijse.shoeShop.service.impl;
 
+import lk.ijse.shoeShop.dto.InventoryDTO;
 import lk.ijse.shoeShop.dto.SaleDTO;
 import lk.ijse.shoeShop.dto.SalesInventoryDTO;
 import lk.ijse.shoeShop.entity.Sales;
@@ -13,39 +14,56 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDateTime;
+import java.time.ZoneId;
+import java.time.format.DateTimeFormatter;
+import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
 public class SaleServiceImpl implements SaleService {
 
-    SaleRepo saleRepo;
-    SaleDetailsRepo saleDetailsRepo;
+    SaleRepo salesRepository;
+    SaleDetailsRepo salesDetailsRepository;
     ModelMapper modelMapper;
 
-    public SaleServiceImpl(SaleRepo saleRepo, SaleDetailsRepo saleDetailsRepo, ModelMapper modelMapper) {
-        this.saleRepo = saleRepo;
-        this.saleDetailsRepo = saleDetailsRepo;
+    public SaleServiceImpl(SaleRepo salesRepository, SaleDetailsRepo salesDetailsRepository, ModelMapper modelMapper) {
+        this.salesRepository = salesRepository;
+        this.salesDetailsRepository = salesDetailsRepository;
         this.modelMapper = modelMapper;
     }
 
-
     @Override
     public List<SaleDTO> getAllSales() {
-        return saleRepo.findAll().stream().map(
-                sales -> modelMapper.map(sales, SaleDTO.class)
-        ).toList();
+        List<Sales> salesList = salesRepository.findAll();
+        return salesList.stream().map(sales -> {
+            SaleDTO salesDTO = modelMapper.map(sales, SaleDTO.class);
+
+            List<SalesDetails> salesDetailsList = salesDetailsRepository.findAllBySalesOrderNo(sales.getOrderNo());
+            List<SalesInventoryDTO> salesInventoryDTOList = salesDetailsList.stream()
+                    .map(details -> {
+                        SalesInventoryDTO salesInventoryDTO = modelMapper.map(details, SalesInventoryDTO.class);
+                        salesInventoryDTO.setInventory(modelMapper.map(details.getInventory(), InventoryDTO.class));
+                        return salesInventoryDTO;
+                    })
+                    .collect(Collectors.toList());
+
+            salesDTO.setInventory(salesInventoryDTOList);
+            return salesDTO;
+        }).collect(Collectors.toList());
     }
 
     @Override
     public SaleDTO getSaleDetails(String id) {
-        if(!saleRepo.existsByOrderNo(id)){
+        if(!salesRepository.existsByOrderNo(id)){
             throw new NotFoundException("Sales "+id+" Not Found!");
         }
-        SaleDTO salesDTO = modelMapper.map(saleRepo.findByOrderNo(id), SaleDTO.class);
+        SaleDTO salesDTO = modelMapper.map(salesRepository.findByOrderNo(id), SaleDTO.class);
         System.out.println("ID-----------------------"+id);
-        List<SalesInventoryDTO> salesInventory = saleDetailsRepo.findAllBySalesOrderNo(id).stream().map(
+        List<SalesInventoryDTO> salesInventory = salesDetailsRepository.findAllBySalesOrderNo(id).stream().map(
                 salesDetails -> modelMapper.map(salesDetails, SalesInventoryDTO.class)
         ).toList();
         salesDTO.setInventory(salesInventory);
@@ -55,17 +73,16 @@ public class SaleServiceImpl implements SaleService {
 
     @Override
     public SaleDTO saveSales(SaleDTO salesDTO) {
-        if(saleRepo.existsByOrderNo(salesDTO.getOrderNo())){
-            throw new DuplicateRecordException("This Sales "+salesDTO.getOrderNo()+" already exist...");
+        if(salesRepository.existsByOrderNo(salesDTO.getOrderNo())){
+            throw new DuplicateRecordException("This Sales "+salesDTO.getOrderNo()+" already exicts...");
         }
-        SaleDTO newsalesDTO = modelMapper.map(saleRepo.save(modelMapper.map(
+        SaleDTO newsalesDTO = modelMapper.map(salesRepository.save(modelMapper.map(
                 salesDTO, Sales.class)), SaleDTO.class
         );
 
         List<SalesInventoryDTO> salesInventoryDTO = new ArrayList<>();
         for (SalesInventoryDTO inventoryDTO : salesDTO.getInventory()) {
-
-            SalesDetails savedSaleDetails = saleDetailsRepo.save(modelMapper.map(inventoryDTO, SalesDetails.class));
+            SalesDetails savedSaleDetails = salesDetailsRepository.save(modelMapper.map(inventoryDTO, SalesDetails.class));
             salesInventoryDTO.add(modelMapper.map(savedSaleDetails, SalesInventoryDTO.class));
         }
         newsalesDTO.setInventory(salesInventoryDTO);
@@ -74,24 +91,45 @@ public class SaleServiceImpl implements SaleService {
 
     @Override
     public void updateSales(String id, SaleDTO salesDTO) {
-
-        for (SalesInventoryDTO inventoryDTO : salesDTO.getInventory()) {
-            if(!saleRepo.existsById(inventoryDTO.getId())){
-                throw new NotFoundException("Update Failed; Sales id: " +
-                        salesDTO.getOrderNo() + " does not exist");
+        for(SalesInventoryDTO inventoryDTO : salesDTO.getInventory()){
+            if(inventoryDTO.getQuantity() == 0){
+                if(!isDateWithinThreeDays(String.valueOf(salesDTO.getPurchaseDate()))){
+                    System.out.println("----------------------------------------------------------------");
+                    System.out.println("comming");
+                    throw new NotFoundException("Update Failed This Order " +
+                            salesDTO.getOrderNo() + " Can't refund");
+                }
             }
-            saleDetailsRepo.save(modelMapper.map(inventoryDTO, SalesDetails.class));
+        }
+        if(salesRepository.existsById(salesDTO.getOrderNo())){
+            salesRepository.save(modelMapper.map(salesDTO,Sales.class));
+            for (SalesInventoryDTO inventoryDTO : salesDTO.getInventory()) {
+                if(!salesDetailsRepository.existsById(inventoryDTO.getId())){
+                    throw new NotFoundException("Update Failed; Sales id: " +
+                            salesDTO.getOrderNo() + " does not exist");
+                }
+                salesDetailsRepository.save(modelMapper.map(inventoryDTO, SalesDetails.class));
+            }
         }
     }
 
     @Override
     public void deleteSales(String id) {
-
-        if(!saleDetailsRepo.existsBySalesOrderNo(id)){
+        if(!salesDetailsRepository.existsBySalesOrderNo(id)&&!salesRepository.existsByOrderNo(id)){
             throw  new NotFoundException("Sales "+ id + "Not Found...");
+        }else if(salesRepository.existsByOrderNo(id)){
+            salesRepository.deleteByOrderNo(id);
         }
-        saleDetailsRepo.deleteAllBySalesOrderNo(id);
-        saleRepo.deleteByOrderNo(id);
+        salesDetailsRepository.deleteAllBySalesOrderNo(id);
+        salesRepository.deleteByOrderNo(id);
+    }
+
+    protected boolean isDateWithinThreeDays(String dateString) {
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("EEE MMM dd HH:mm:ss z yyyy");
+        LocalDateTime inputDate = LocalDateTime.parse(dateString, formatter.withZone(ZoneId.of("Asia/Kolkata")));
+        LocalDateTime currentDate = LocalDateTime.now(ZoneId.of("Asia/Kolkata"));
+        LocalDateTime threeDaysAgo = currentDate.minus(3, ChronoUnit.DAYS);
+        return !inputDate.isBefore(threeDaysAgo);
     }
 }
 
